# particle-sim

./: .gitignore  CMakeLists.txt  README.md  particle-sim.sln  particle-sim.vcxproj
assets/: config.txt
assets/shaders/: colorByBoth.frag  colorByDirection.frag  colorByNone.frag  colorByVelocity.frag  simulation.frag  simulation.vert
source/: Config.cpp  Config.h  Simulation.cpp  Simulation.h  Timer.h  main.cpp
source/particle/: CpuParticleManager.cpp  CpuParticleManager.h  GpuParticleKernel.cu  GpuParticleManager.cpp  GpuParticleManager.h  GridCpuParticleManager.cpp  GridCpuParticleManager.h  IParticleManager.h  Particles.h  SOAGpuParticleKernel.cu  SOAGpuParticleManager.cpp  SOAGpuParticleManager.h  SteppedCpuParticleManager.cpp  SteppedCpuParticleManager.h  cuda_utils.cu  cuda_utils.h
source/rendering/: Program.cpp  Program.h  Shader.cpp  Shader.h
